--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,3 +1,7 @@
 {
-  "test": "Test"
+  "homePageTitle": "Home",
+  "promotionsPageTitle": "Promotions",
+  "deliveryAndPaymentPageTitle": "Delivery and payment",
+  "aboutPageTitle": "About Us",
+  "contactsPageTitle": "Contacts"
 }
