--- a/src/i18n/locales/uk.json
+++ b/src/i18n/locales/uk.json
@@ -1,3 +1,7 @@
 {
-  "test": "Тест"
+  "homePageTitle": "Головна",
+  "promotionsPageTitle": "Акції",
+  "deliveryAndPaymentPageTitle": "Доставка i оплата",
+  "aboutPageTitle": "Про нас",
+  "contactsPageTitle": "Контакти"
 }
