--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,7 +1,9 @@
 {
+  "and": "and",
   "homePageTitle": "Home",
   "promotionsPageTitle": "Promotions",
-  "deliveryAndPaymentPageTitle": "Delivery and payment",
+  "deliveryPageTitle": "Delivery",
+  "paymentPageTitle": "Payment",
   "aboutPageTitle": "About Us",
   "contactsPageTitle": "Contacts",
   "addressTitle": "Address",
