created Promotions page

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -8,5 +8,7 @@
   "contactsPageTitle": "Contacts",
   "addressTitle": "Address",
   "workModeTitle": "Work mode",
-  "phoneNumberTitle": "Phone for ordering"
+  "phoneNumberTitle": "Phone for ordering",
+  "details": "Details",
+  "сollapse": "Collapse"
 }
