--- a/src/i18n/locales/uk.json
+++ b/src/i18n/locales/uk.json
@@ -8,5 +8,7 @@
   "contactsPageTitle": "Контакти",
   "addressTitle": "Адреса",
   "workModeTitle": "Режим роботи",
-  "phoneNumberTitle": "Телефон для замовлення"
+  "phoneNumberTitle": "Телефон для замовлення",
+  "details": "Детальніше",
+  "сollapse": "Згорнути"
 }
